<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuopc.AcercaDe">

        <include
            android:id="@+id/miActionBar"
            layout="@layout/actionbar">
        </include>

        <LinearLayout
            android:layout_below="@id/miActionBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPetagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:src="@drawable/acerca"
                android:layout_gravity="center_horizontal"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/app_bio"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_descripcion"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dominio"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textStyle="normal"
                android:textSize="12sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/derechos"
                android:textSize="12sp"
                android:textAlignment="center"/>


        </LinearLayout>


</RelativeLayout>
