<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuopc.Contacto">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/miActionBar"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPetagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/log"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msj_contacto_1"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/textoInput"
                android:hint="@string/hint_input_nombre_completo"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/textoInput"
                android:hint="@string/hint_input_correo_electronico" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textColor="@color/textoInput"
                android:hint="@string/hint_input_mensaje"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorBlanco"
            android:theme="@style/Boton"
            android:text="@string/label_btn_enviar"
            android:onClick="enviarMensaje" />

    </LinearLayout>
</RelativeLayout>
